# Ikarus

./: CMakeLists.txt  func.ik  main.cpp  main.ik  math.ik  test.ik  test_main.ik
Backend/include/: Command.hpp  Interpreter.hpp  Lexer.hpp  OpCode.hpp  compare.hpp  types.hpp  unique.hpp  util.hpp
Backend/include/Expression/: AddExpression.hpp  BinaryExpression.hpp  DecExpression.hpp  DivExpression.hpp  Expression.hpp  IncExpression.hpp  ModExpression.hpp  MulExpression.hpp  NegExpression.hpp  NotExpression.hpp  SubExpression.hpp  UnaryExpression.hpp
Backend/include/Value/: ArrayValue.hpp  IntegerValue.hpp  NumericValue.hpp  Value.hpp
Backend/include/Visitor/: AssignValueVisitor.hpp  ExpressionVisitor.hpp  ImmutableValueRevelation.hpp  ImmutableValueVisitor.hpp  IndexValueVisitor.hpp  MathExpressionVisitor.hpp  MutableValueRevelation.hpp  MutableValueVisitor.hpp  NumericValueVisitor.hpp  OutputValueVisitor.hpp  ValueRevelation.hpp  ValueVisitor.hpp
Backend/src/: Command.cpp  Interpreter.cpp  Lexer.cpp  OpCode.cpp
Backend/src/Expression/: AddExpression.cpp  BinaryExpression.cpp  DecExpression.cpp  DivExpression.cpp  IncExpression.cpp  ModExpression.cpp  MulExpression.cpp  NegExpression.cpp  NotExpression.cpp  SubExpression.cpp  UnaryExpression.cpp
Backend/src/Value/: ArrayValue.cpp  IntegerValue.cpp  NumericValue.cpp
Backend/src/Visitor/: AssignValueVisitor.cpp  IndexValueVisitor.cpp  MathExpressionVisitor.cpp  NumericValueVisitor.cpp  OutputValueVisitor.cpp
include/: AbstractLexer.hpp  Instruction.hpp  Interpreter.hpp  Lexer.hpp  Location.hpp  NullExpression.hpp  OpCode.cpp  Parser.hpp  StorageClass.hpp  Token.hpp  Visitable.hpp  types.hpp  unique.hpp  util.hpp
include/Backend/: Instruction.hpp  Interpreter.hpp  Lexer.hpp  OpCode.hpp  Parser.hpp
include/Backend/VM/: Code.hpp  Offset.hpp  Operand.hpp  Value.hpp  Variable.hpp
include/Declaration/: Declaration.hpp  VariableDeclaration.hpp
include/Expression/: AddExpression.hpp  ArrayExpression.hpp  BinaryExpression.hpp  BoolExpression.hpp  DecrementExpression.hpp  DivideExpression.hpp  EqualExpression.hpp  Expression.hpp  GreaterEqualExpression.hpp  GreaterExpression.hpp  IncrementExpression.hpp  IndexAccessExpression.hpp  IndexAssignExpression.hpp  LowerEqualExpression.hpp  LowerExpression.hpp  ModuloExpression.hpp  MultiplyExpression.hpp  NegateExpression.hpp  NotEqualExpression.hpp  NotExpression.hpp  NumericExpression.hpp  StringExpression.hpp  SubtractExpression.hpp  UnaryExpression.hpp  VariableExpression.hpp
include/Frontend/: Evaluable.hpp  Keyword.hpp  Lexer.hpp  Operator.hpp  Parser.hpp  Scope.cpp  Scope.hpp
include/Frontend/Declaration/: Declaration.hpp  VariableDeclaration.hpp
include/Statement/: Statement.hpp  WhileStatement.hpp
include/Visitor/: AppendVisitor.hpp  AssignmentCommandVisitor.hpp  AssignmentVisitor.hpp  CommandVisitor.hpp  EvalVisitor.hpp  MathEvalVisitor.cpp  MathEvalVisitor.hpp  MathVisitor.hpp  OutputVisitor.hpp  RevelationVisitor.hpp  Visitor.hpp
src/: AbstractLexer.cpp  Interpreter.cpp  Lexer.cpp  Location.cpp  Token.cpp
src/Backend/: Instruction.cpp  Interpreter.cpp  Lexer.cpp  OpCode.cpp  Parser.cpp
src/Backend/VM/: Code.cpp  Operand.cpp
src/Declaration/: Declaration.cpp  VariableDeclaration.cpp
src/Expression/: AddExpression.cpp  ArrayExpression.cpp  BinaryExpression.cpp  DecrementExpression.cpp  DivideExpression.cpp  IncrementExpression.cpp  IndexAccessExpression.cpp  IndexAssignExpression.cpp  ModuloExpression.cpp  MultiplyExpression.cpp  NegateExpression.cpp  NotExpression.cpp  NumericExpression.cpp  StringExpression.cpp  SubtractExpression.cpp  UnaryExpression.cpp
src/Frontend/: Keyword.cpp  Lexer.cpp  Parser.cpp  Scope.cpp
src/Frontend/Declaration/: Declaration.cpp  VariableDeclaration.cpp
src/Statement/: Statement.cpp  WhileStatement.cpp
src/Visitor/: AppendVisitor.cpp  EvalVisitor.cpp  MathEvalVisitor.cpp  MathVisitor.cpp  OutputVisitor.cpp
